--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -60,6 +60,9 @@ on init
     write /dev/cpuctl/top-app/cpu.rt_runtime_us 950000
     write /dev/cpuctl/rt/cpu.rt_runtime_us 950000
 
+    # Start audio adsp rpc daemon at early init stage
+    start vendor.audioadsprpcd_audiop
+
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     chown system system /sys/devices/platform/soc/1d84000.ufshc/auto_hibern8
